Changed filter on tweet_text back to built-in Linky Temp favicon.ico created (copied) Highlight filter now escapes phrase for RegEx expressions (*. etc.) tweet_id added to view for debuggin purposes $timeout added into tweet $http.get functions in attempt to stop overlapping requests for new tweets (not working)

--- a/style.css
+++ b/style.css
@@ -91,13 +91,13 @@ INPUT.search-tweets, BUTTON.search-tweets {
     text-align: left;
     margin-right: 3px;
 }
-.user {
+.user{
   font-weight: bold;
   border-bottom: solid;
   border-width: 1px;
   vertical-align: bottom;
 }
-.user-handle {
+.user-handle, .tweet-id {
     float: right;
     vertical-align: middle;
     line-height: 18px;
@@ -112,6 +112,8 @@ INPUT.search-tweets, BUTTON.search-tweets {
 .created-at {
     font-size: 75%;
     margin-bottom: 5px;
+    float:left;
+    color: #00C0F7;
 }
 IMG.profile-image {
     margin: 0px;
